# petchr-py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/petchr/: __init__.py  client.py  exceptions.py  rate_limiter.py
tests/: test_petchr.py
