[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petchr"
version = "1.0.0"
description = "A zero-dependency HTTP client for Python with retry, timeout, and rate-limiting"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "eritrouib" }]
requires-python = ">=3.9"
keywords = ["http", "client", "retry", "timeout", "rate-limit", "requests", "httpx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/eritrouib/petchr-py"
Repository = "https://github.com/eritrouib/petchr-py"
Issues = "https://github.com/eritrouib/petchr-py/issues"

[tool.setuptools.packages.find]
where = ["src"]
